fix: alert-text -- remove left property and aligned text-center

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -36,7 +36,7 @@
 	position: fixed;
 	height: 100vh;
 	width: 100%;
-	background-color: rgba(0, 0, 0, 0.274);
+	background-color: rgba(0, 0, 0, 0.404);
 	z-index: 10;
 }
 
@@ -52,8 +52,10 @@
 
 .alert-text {
 	position: absolute;
-	left: 50%;
+	width: 100%;
 	line-height: 4em;
+	text-align: center;
+	color: #fff;
 }
 .alert-close {
 	position: absolute;
